--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,35 @@
     top: 0px;
 }
 
-/* Estilos del Footer */
+.nav-item:hover {
+    border: solid;
+    border: 0 0 3px 0;
+    border-color: white;
+}
 
+.nav-item:hover {
+    transform: scale(1.1);
+    transition-property: all;
+    transition-timing-function: ease-in-out;
+    transition-duration: 0.5s;
+    animation-name: entrada-superior;
+    
+    
+    
+
+    border: solid;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-color: white;
+}
+
+/* Estilos del Footer */
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 footer div ul li {
     display: inline-block;
@@ -21,7 +48,28 @@ footer div :nth-child(1) {
 }
 
 footer ul li a svg {
-    margin: 0 16px;
+    margin: 8px; 
+}
+
+footer ul li a svg:hover {
+    animation-name: rotar;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+    
+    transform:rotateY(360deg) ;
+}
+
+@keyframes rotar{
+    0% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(180deg);
+    }
+    100% {
+        transform: rotateY(360deg);
+    }
 }
 
 /* Pagina Contacto */
@@ -29,8 +77,9 @@ footer ul li a svg {
     padding: 12px;
 
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
 }
 
 .contacto-2 {
